<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailEvent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tvDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_title"
                android:textAlignment="center"
                android:layout_margin="8dp"
                android:textSize="26sp"
                app:layout_constraintTop_toBottomOf="@id/img_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/penyelenggara"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Penyelenggara : "
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tvOwnerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tvOwnerName"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle"
                app:layout_constraintStart_toEndOf="@+id/penyelenggara"
                />

            <TextView
                android:id="@+id/beginTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Waktu Acara :"
                android:textSize="16sp"
                android:padding="8dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvOwnerName"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tvbeginTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/beginTime"
                android:textSize="16sp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvOwnerName"
                app:layout_constraintStart_toEndOf="@+id/beginTime"
                />

            <TextView
                android:id="@+id/remainingQuota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Sisa Kuota :"
                android:textSize="16sp"
                android:padding="8dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/beginTime"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/quota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/quota"
                android:textSize="16sp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/beginTime"
                app:layout_constraintStart_toEndOf="@+id/remainingQuota"
                />

            <TextView
                android:id="@+id/strip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/strip"
                android:textSize="16sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/beginTime"
                app:layout_constraintStart_toEndOf="@+id/quota"
                />

            <TextView
                android:id="@+id/registrant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/registrant"
                android:textSize="16sp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/beginTime"
                app:layout_constraintStart_toEndOf="@+id/strip"
                />



            <WebView
                android:id="@+id/tvDesciption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:textSize="16sp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/quota"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            >

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>